# bot

./: .env.dev  .env.prod  .gitignore  README.md  bot.py  pyproject.toml
data/bread/578532886/: bread.db
data/fortune/: fortune_config.json  fortune_data.json  fortune_setting.json
data/fortune/fortune/: copywriting.json
data/group/: 000  001  010  011  100  101  110  111  welcome.txt
src/plugins/bread/: __init__.py  bread_event.py  bread_operate.py  config.py
src/plugins/fortune/: config.py
src/plugins/group_manage/: __init__.py  admin.py  approve.py  auto_ban.py  auto_ban_.py  broadcast.py  config.py  file.py  func_hook.py  group_recall.py  group_request_verify.py  group_welcome.py  notice.py  particular_e_notice.py  request_manual.py  requests.py  rule.py  switcher.py  task_scheduler.py  utils.py  word_analyze.py  wordcloud.py
